Overflow en x ahora esta oculto para evitar bugs al cargar en mobile (por las animaciones)

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@
 html {
   scroll-behavior: smooth;
   scroll-padding-top: 90px;
+  overflow-x: hidden;
 }
 /* Seteo de fondo */
 body {
